# clang-tidy-forwarding-ref-rule

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  example.cpp
lib/: CMakeLists.txt  MoveConstructorNoexcept.cpp  MoveConstructorNoexcept.h
